# itest

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  SCR.txt  b  run_tests  test_framework.sh
inc/: 8dxl_conf.h  ItestConfig.h.in  dut_conf.h  ijson_utils.h  imx8_tests_list.h  itest.h  test_api.h  v2x_perf.h  version.h.in
inc/crypto_utils/: cipher_aes.h  dgst.h  ecc_sign.h  sm2_cipher_error_codes.h  sm3_with_preprocess.h  sm4_ed.h
inc/test_vectors/: common.h  tv_cipher_sm4_ccm.h  tv_verify_bp256r1.h  tv_verify_bp256t1.h  tv_verify_bp384r1.h  tv_verify_bp384t1.h  tv_verify_nistp256.h  tv_verify_nistp384.h  tv_verify_sm2.h
scripts/: setup.sh  teardown.sh
src/: 8dxl_a1_conf.c  8dxl_conf.c  8qxp_b0_conf.c  8qxp_c0_conf.c  cipher_aes_cbc_ecb_001_test.c  dbg_conf.c  hsm_functions.c  isentinel_api_test.c  isentinel_test.c  itest.c  main.c  she_functions.c  sm2_key_gen_001_test.c  test_api.c  v2x_auth_enc_001.c  v2x_butterfly_key_exp_001_test.c  v2x_chunk_swap_001_test.c  v2x_cipher_aes_cbc_ecb_001_test.c  v2x_dbg_cmd.c  v2x_ks_bad_auth_test.c  v2x_ks_import_export_test.c  v2x_ks_no_update_001.c  v2x_ks_update_001.c  v2x_parallel_sign_gen_ver_001.c  v2x_perf_test.c  v2x_pub_key_decomp_001_test.c  v2x_pub_key_recovery_001_test.c  v2x_rng_srv_test.c  v2x_sm2_key_gen_001_test.c
src/crypto_utils/: cipher_aes.c  dgst.c  ecc_sign.c  sm2_create_key_pair.c  sm2_sign_and_verify.c  sm3_with_preprocess.c  sm4_ed.c
src/ele_hsm_tests/: ecdsa_brainpool_sign_verify.c  ecdsa_nist_sign_verify.c  ele_cbc.c  ele_ccm.c  ele_cfb.c  ele_cmac.c  ele_ctr.c  ele_ecb.c  ele_gcm.c  ele_hash_sha2.c  ele_hash_sha3.c  ele_hmac.c  ele_ofb.c  ele_randomness_gcm.c  ele_rng_perf.c  ele_rng_srv_test.c  rsa_key_gen_pkcs1_pss_mgf1.c  rsa_key_gen_pkcs1_v15.c
src/hsm_ele_tests/: ecdsa_brainpool_sign_verify.c  ecdsa_nist_sign_verify.c  ele_cbc.c  ele_ccm.c  ele_cfb.c  ele_cmac.c  ele_ctr.c  ele_ecb.c  ele_gcm.c  ele_hash.c  ele_hmac.c  ele_ofb.c  ele_randomness_gcm.c  ele_rng_perf.c  ele_rng_srv_test.c  ele_sign_verify.c
src/hsm_seco_tests/: seco_aes_gcm_iv_test.c  seco_auth_enc_001.c  seco_cmac_mmcau_test_001.c  seco_hash_all_test.c  seco_hsm_fast_cmac_perf_test.c  seco_hsm_get_info_001_test.c  seco_key_store_benchmark_test.c  seco_ks_bad_auth_test.c  seco_ks_import_export_test.c  seco_otp_kek_001.c  seco_otp_kek_002.c  seco_prepare_signature_001.c  seco_prepare_signature_002.c  seco_prepare_signature_003.c  seco_rng_srv_test.c
src/hsm_v2x_tests/: sanity_test_crypto.c  v2x_aes_gcm_iv_test.c  v2x_all_srv_test.c  v2x_auth_enc_001.c  v2x_auth_enc_sm4_ccm_test.c  v2x_ba414_issue_sign_verify.c  v2x_butterfly_key_exp_002_test.c  v2x_butterfly_key_exp_003_test.c  v2x_chunk_swap_001_test.c  v2x_cipher_aes_cbc_ecb_001_test.c  v2x_cipher_aes_cbc_ecb_ccm_mode_001_test.c  v2x_cipher_aes_ccm_001_test.c  v2x_key_generic_crypto_sm4_ccm.c  v2x_key_store_benchmark_test.c  v2x_ks_bad_auth_test.c  v2x_ks_create_bad_id_001.c  v2x_ks_import_export_test.c  v2x_ks_no_update_001.c  v2x_ks_update_001.c  v2x_otp_kek_001.c  v2x_otp_kek_002.c  v2x_parallel_sign_gen_key_gen_001.c  v2x_parallel_sign_gen_key_gen_002.c  v2x_parallel_sign_gen_ver_001.c  v2x_perf_SM4_cipher_001_test.c  v2x_perf_pub_key_decomp.c  v2x_perf_pub_key_reconstruction.c  v2x_perf_sig_gen.c  v2x_perf_test.c  v2x_ping_all_mu.c  v2x_prepare_signature_001.c  v2x_prepare_signature_002.c  v2x_prepare_signature_003.c  v2x_pub_key_decomp_001_test.c  v2x_pub_key_reconstruction_sm2_001_test.c  v2x_pub_key_recovery_001_test.c  v2x_rng_srv_test.c  v2x_sm2_eces_002_test.c  v2x_sm2_eces_003_test..c  v2x_sm2_st_butt_key_exp_swap_001.c  (+4 more)
src/json_utils/: ecdsa_brainpoolP256r1_sha256_test.json  ecdsa_brainpoolP384r1_sha384_test.json  ecdsa_secp256r1_sha256_test.json  ecdsa_secp384r1_sha384_test.json  ecdsa_secp521r1_sha512_test.json  json_parse_fd.c  wycheproof_json_parse.c
src/seco_tests/: seco_auth_enc_001.c  seco_prepare_signature_001.c  seco_prepare_signature_002.c  seco_prepare_signature_003.c
src/she_seco_tests/: seco_she_load_key_001_test.c
src/tests/: seco_aes_gcm_iv_test.c  seco_auth_enc_001.c  seco_ks_import_export_test.c  v2x_aes_gcm_iv_test.c  v2x_auth_enc_001.c  v2x_butterfly_key_exp_001_test.c  v2x_chunk_swap_001_test.c  v2x_hash_all_test.c  v2x_ks_bad_auth_test.c  v2x_ks_create_bad_id_001.c  v2x_ks_import_export_test.c  v2x_ks_no_update_001.c  v2x_ks_update_001.c  v2x_parallel_sign_gen_key_gen_001.c  v2x_parallel_sign_gen_ver_001.c  v2x_perf_sig_gen.c  v2x_perf_sig_ver.c  v2x_perf_test.c  v2x_prepare_signature.c  v2x_pub_key_recovery_001_test.c  v2x_rex_test.c  v2x_rng_srv_test.c
src/tests_vector/: tv_cipher_sm4_ccm.c  tv_verify_bp256r1.c  tv_verify_bp256t1.c  tv_verify_bp384r1.c  tv_verify_bp384t1.c  tv_verify_nistp256.c  tv_verify_nistp384.c  tv_verify_sm2.c
src/v2x_hsm_tests/: v2x_aes_cbc.c  v2x_aes_cmac.c  v2x_aes_ecb.c  v2x_aes_gcm.c  v2x_ecdsa_brainpool_sign_verify.c  v2x_ecdsa_nist_sign_verify.c  v2x_ecdsa_verify.c  v2x_ecdsa_verify_brainpool.c  v2x_hash.c  v2x_hash_SM3.c  v2x_sm2_eces.c  v2x_sm2_sign_verify.c  v2x_sm4_cbc.c  v2x_sm4_ccm.c  v2x_sm4_ecb.c
src/v2x_she_tests/: v2x_cmac.c  v2x_fast_mac.c  v2x_fast_mac_mubuff_v2.c
src/v2x_tests/: sanity_test_crypto.c  v2x_auth_enc_001.c  v2x_cmac.c  v2x_fast_mac.c  v2x_fast_mac_mubuff_v2.c  v2x_hash_all_test.c  v2x_hsm_get_info_001_test.c  v2x_ks_no_update_001.c  v2x_perf_sig_gen.c  v2x_perf_sig_ver.c  v2x_prepare_signature.c  v2x_prepare_signature_001.c  v2x_prepare_signature_002.c  v2x_prepare_signature_003.c  v2x_sm2_eces_001_test.c  v2x_sm2_eces_002_test.c  v2x_sm2_eces_003_test..c
